refactor: AI 도메인 로직 개선 - 소프트삭제 데이터 필터링 - Optional 사용 NPE 방지 - AiEvent 인터페이스 AiAnalysisCompletedPayload 전달로 수정 - 인증 및 pageable 추가