@@ -1,12 +1,27 @@
 package org.iimsa.aiservice.application.service;
 
-import lombok.extern.slf4j.Slf4j;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.then;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import org.iimsa.aiservice.application.dto.query.GetAiQuery;
 import org.iimsa.aiservice.application.result.AiResult;
 import org.iimsa.aiservice.domain.exception.AiNotFoundException;
 import org.iimsa.aiservice.domain.model.AiEntity;
 import org.iimsa.aiservice.domain.model.Receiver;
 import org.iimsa.aiservice.domain.repository.AiRepository;
+import org.iimsa.common.util.SecurityUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -14,25 +29,15 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.then;
-import static org.mockito.Mockito.times;
-
-@Slf4j
 @ExtendWith(MockitoExtension.class)
-@DisplayName("AiApplicationServiceImpl 테스트")
+@DisplayName("AiApplicationServiceImpl 단위 테스트")
 class AiApplicationServiceImplTest {
 
     @Mock
@@ -41,206 +46,209 @@ class AiApplicationServiceImplTest {
     @InjectMocks
     private AiApplicationServiceImpl aiApplicationService;
 
-    // ───────────────────────────────────────────────
-    // 테스트 픽스처
-    // ───────────────────────────────────────────────
-
     private UUID aiId;
     private UUID receiverId;
-    private AiEntity aiEntity;
+    private Pageable pageable;
 
     @BeforeEach
     void setUp() {
         aiId = UUID.randomUUID();
         receiverId = UUID.randomUUID();
-
-        Receiver receiver = new Receiver(receiverId, "U12345678", "홍길동");
-        aiEntity = AiEntity.create(receiver, "배송 최적 경로 알려줘");
-        aiEntity.complete("최적 경로는 A→B→C입니다.", "AI 자동 분석");
-
-        log.info("[setUp] aiId={}, receiverId={}", aiId, receiverId);
+        pageable = PageRequest.of(0, 10);
     }
 
-    // ───────────────────────────────────────────────
-    // getAi
-    // ───────────────────────────────────────────────
+    // 테스트용 AiEntity Mock 생성 헬퍼
+    private AiEntity createMockAiEntity() {
+        AiEntity ai = mock(AiEntity.class);
+        Receiver receiver = mock(Receiver.class);
+
+        lenient().when(ai.getId()).thenReturn(aiId);
+        lenient().when(ai.getReceiver()).thenReturn(receiver);
+        lenient().when(ai.getPrompt()).thenReturn("배송 최적경로 분석 요청");
+        lenient().when(ai.getGeneratedText()).thenReturn("최적 경로: A → B → C");
+        lenient().when(ai.getReason()).thenReturn("거리 최소화 기준");
+        lenient().when(ai.getCreatedAt()).thenReturn(LocalDateTime.of(2024, 1, 1, 12, 0));
+
+        lenient().when(receiver.getId()).thenReturn(receiverId);
+        lenient().when(receiver.getReceiverName()).thenReturn("홍길동");
+        lenient().when(receiver.getSlackId()).thenReturn("U123456");
+
+        return ai;
+    }
+
+    // ─── getAi ───────────────────────────────────────────────
 
     @Nested
-    @DisplayName("단건 조회 - getAi()")
-    class GetAiTest {
+    @DisplayName("AI 분석 결과 단건 조회")
+    class GetAi {
 
         @Test
-        @DisplayName("존재하는 ID로 조회하면 AiResult를 반환한다")
-        void getAi_success() {
+        @DisplayName("성공 - 존재하는 ID면 AiResult 반환")
+        void success() {
             // given
-            given(aiRepository.findById(aiId)).willReturn(Optional.of(aiEntity));
-            log.info("[getAi_success] given - aiId={}", aiId);
+            AiEntity mockAi = createMockAiEntity();
+            given(aiRepository.findById(aiId)).willReturn(Optional.of(mockAi));
 
             // when
             AiResult result = aiApplicationService.getAi(aiId);
-            log.info("[getAi_success] when - result={}", result);
 
             // then
-            assertThat(result).isNotNull();
+            // getAi 성공 테스트 - id()로 수정
+            assertThat(result.id()).isEqualTo(aiId);          // aiId() → id()
             assertThat(result.receiverId()).isEqualTo(receiverId);
-            assertThat(result.receiverName()).isEqualTo("홍길동");
-            assertThat(result.receiverSlackId()).isEqualTo("U12345678");
-            assertThat(result.generatedText()).isEqualTo("최적 경로는 A→B→C입니다.");
-            assertThat(result.reason()).isEqualTo("AI 자동 분석");
-
-            log.info("[getAi_success] then - receiverId={}, receiverName={}, generatedText={}",
-                    result.receiverId(), result.receiverName(), result.generatedText());
+            assertThat(result.generatedText()).isEqualTo("최적 경로: A → B → C");
 
             then(aiRepository).should(times(1)).findById(aiId);
         }
 
         @Test
-        @DisplayName("존재하지 않는 ID로 조회하면 AiNotFoundException이 발생한다")
-        void getAi_notFound() {
+        @DisplayName("실패 - 존재하지 않는 ID면 AiNotFoundException 발생")
+        void notFound() {
             // given
             given(aiRepository.findById(aiId)).willReturn(Optional.empty());
-            log.info("[getAi_notFound] given - 존재하지 않는 aiId={}", aiId);
 
             // when & then
             assertThatThrownBy(() -> aiApplicationService.getAi(aiId))
                     .isInstanceOf(AiNotFoundException.class);
-
-            log.info("[getAi_notFound] then - AiNotFoundException 발생 확인 완료");
-            then(aiRepository).should(times(1)).findById(aiId);
         }
     }
 
-    // ───────────────────────────────────────────────
-    // getAiListByReceiver
-    // ───────────────────────────────────────────────
+    // ─── getAiListByReceiver ──────────────────────────────────
 
     @Nested
-    @DisplayName("수신자별 목록 조회 - getAiListByReceiver()")
-    class GetAiListByReceiverTest {
+    @DisplayName("수신자별 AI 분석 결과 목록 조회")
+    class GetAiListByReceiver {
 
         @Test
-        @DisplayName("수신자 ID로 조회하면 해당 수신자의 AI 결과 페이지를 반환한다")
-        void getAiListByReceiver_success() {
+        @DisplayName("성공 - 결과가 있을 때 Page<AiResult> 반환")
+        void success() {
             // given
-            Pageable pageable = PageRequest.of(0, 10);
-            Page<AiEntity> entityPage = new PageImpl<>(List.of(aiEntity), pageable, 1);
-
-            given(aiRepository.findByReceiverId(receiverId, pageable)).willReturn(entityPage);
-            log.info("[getAiListByReceiver_success] given - receiverId={}, page={}, size={}",
-                    receiverId, pageable.getPageNumber(), pageable.getPageSize());
-
+            AiEntity mockAi = createMockAiEntity();
+            Page<AiEntity> mockPage = new PageImpl<>(List.of(mockAi), pageable, 1);
             GetAiQuery query = GetAiQuery.ofByReceiver(receiverId, pageable);
+            given(aiRepository.findByReceiverId(receiverId, pageable)).willReturn(mockPage);
 
             // when
             Page<AiResult> result = aiApplicationService.getAiListByReceiver(query);
-            log.info("[getAiListByReceiver_success] when - totalElements={}", result.getTotalElements());
 
             // then
             assertThat(result.getTotalElements()).isEqualTo(1);
-            assertThat(result.getContent().getFirst().receiverId()).isEqualTo(receiverId);
-
-            log.info("[getAiListByReceiver_success] then - 조회된 receiverId={}", result.getContent().getFirst().receiverId());
+            assertThat(result.getContent().get(0).receiverId()).isEqualTo(receiverId);
             then(aiRepository).should(times(1)).findByReceiverId(receiverId, pageable);
         }
 
         @Test
-        @DisplayName("수신자의 AI 결과가 없으면 빈 페이지를 반환한다")
-        void getAiListByReceiver_empty() {
+        @DisplayName("성공 - 결과 없을 때 빈 Page 반환")
+        void empty() {
             // given
-            Pageable pageable = PageRequest.of(0, 10);
             Page<AiEntity> emptyPage = new PageImpl<>(List.of(), pageable, 0);
-
-            given(aiRepository.findByReceiverId(receiverId, pageable)).willReturn(emptyPage);
-            log.info("[getAiListByReceiver_empty] given - 결과 없는 receiverId={}", receiverId);
-
             GetAiQuery query = GetAiQuery.ofByReceiver(receiverId, pageable);
+            given(aiRepository.findByReceiverId(receiverId, pageable)).willReturn(emptyPage);
 
             // when
             Page<AiResult> result = aiApplicationService.getAiListByReceiver(query);
-            log.info("[getAiListByReceiver_empty] when - totalElements={}", result.getTotalElements());
 
             // then
-            assertThat(result.getTotalElements()).isEqualTo(0);
+            assertThat(result.getTotalElements()).isZero();
             assertThat(result.getContent()).isEmpty();
-            log.info("[getAiListByReceiver_empty] then - 빈 페이지 반환 확인 완료");
         }
     }
 
-    // ───────────────────────────────────────────────
-    // getAllAiList
-    // ───────────────────────────────────────────────
+    // ─── getAllAiList ─────────────────────────────────────────
 
     @Nested
-    @DisplayName("전체 목록 조회 - getAllAiList()")
-    class GetAllAiListTest {
+    @DisplayName("전체 AI 분석 결과 목록 조회")
+    class GetAllAiList {
 
         @Test
-        @DisplayName("전체 AI 결과 페이지를 반환한다")
-        void getAllAiList_success() {
+        @DisplayName("성공 - 전체 목록 Page<AiResult> 반환")
+        void success() {
             // given
-            Pageable pageable = PageRequest.of(0, 10);
-            Page<AiEntity> entityPage = new PageImpl<>(List.of(aiEntity), pageable, 1);
-
-            given(aiRepository.findAll(pageable)).willReturn(entityPage);
-            log.info("[getAllAiList_success] given - 전체 조회 page={}, size={}",
-                    pageable.getPageNumber(), pageable.getPageSize());
-
+            AiEntity mockAi = createMockAiEntity();
+            Page<AiEntity> mockPage = new PageImpl<>(List.of(mockAi), pageable, 1);
             GetAiQuery query = GetAiQuery.ofAll(pageable);
+            given(aiRepository.findAll(pageable)).willReturn(mockPage);
 
             // when
             Page<AiResult> result = aiApplicationService.getAllAiList(query);
-            log.info("[getAllAiList_success] when - totalElements={}", result.getTotalElements());
 
             // then
             assertThat(result.getTotalElements()).isEqualTo(1);
-            log.info("[getAllAiList_success] then - 전체 조회 완료");
-
             then(aiRepository).should(times(1)).findAll(pageable);
+        }
+
+        @Test
+        @DisplayName("성공 - 데이터 없을 때 빈 Page 반환")
+        void empty() {
+            // given
+            Page<AiEntity> emptyPage = new PageImpl<>(List.of(), pageable, 0);
+            GetAiQuery query = GetAiQuery.ofAll(pageable);
+            given(aiRepository.findAll(pageable)).willReturn(emptyPage);
+
+            // when
+            Page<AiResult> result = aiApplicationService.getAllAiList(query);
+
+            // then
+            assertThat(result.getTotalElements()).isZero();
         }
     }
 
-    // ───────────────────────────────────────────────
-    // deleteAi
-    // ───────────────────────────────────────────────
+    // ─── deleteAi ────────────────────────────────────────────
 
     @Nested
-    @DisplayName("삭제 - deleteAi()")
-    class DeleteAiTest {
+    @DisplayName("AI 분석 결과 삭제")
+    class DeleteAi {
 
         @Test
-        @DisplayName("존재하는 AI 결과를 삭제하면 softDelete 후 save가 호출된다")
-        void deleteAi_success() {
+        @DisplayName("성공 - 인증된 사용자명으로 softDelete 호출")
+        void success() {
             // given
-            given(aiRepository.findById(aiId)).willReturn(Optional.of(aiEntity));
-            given(aiRepository.save(aiEntity)).willReturn(aiEntity);
-            log.info("[deleteAi_success] given - 삭제할 aiId={}", aiId);
+            AiEntity mockAi = createMockAiEntity();
+            given(aiRepository.findById(aiId)).willReturn(Optional.of(mockAi));
 
-            // when
-            aiApplicationService.deleteAi(aiId);
-            log.info("[deleteAi_success] when - deleteAi 호출 완료");
+            try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+                securityUtil.when(SecurityUtil::getCurrentUsername)
+                        .thenReturn(Optional.of("admin"));
 
-            // then
-            assertThat(aiEntity.getDeletedAt()).isNotNull();
-            log.info("[deleteAi_success] then - deletedAt={} (softDelete 정상 작동)", aiEntity.getDeletedAt());
+                // when
+                aiApplicationService.deleteAi(aiId);
 
-            then(aiRepository).should(times(1)).findById(aiId);
-            then(aiRepository).should(times(1)).save(aiEntity);
+                // then
+                then(mockAi).should(times(1)).softDelete("admin");
+                then(aiRepository).should(times(1)).save(mockAi);
+            }
         }
 
         @Test
-        @DisplayName("존재하지 않는 AI 결과 삭제 시 AiNotFoundException이 발생한다")
-        void deleteAi_notFound() {
+        @DisplayName("성공 - 인증 정보 없을 때 'system'으로 softDelete 호출")
+        void withoutAuth() {
+            // given
+            AiEntity mockAi = createMockAiEntity();
+            given(aiRepository.findById(aiId)).willReturn(Optional.of(mockAi));
+
+            try (MockedStatic<SecurityUtil> securityUtil = mockStatic(SecurityUtil.class)) {
+                securityUtil.when(SecurityUtil::getCurrentUsername)
+                        .thenReturn(Optional.empty());
+
+                // when
+                aiApplicationService.deleteAi(aiId);
+
+                // then
+                then(mockAi).should(times(1)).softDelete("system");
+                then(aiRepository).should(times(1)).save(mockAi);
+            }
+        }
+
+        @Test
+        @DisplayName("실패 - 존재하지 않는 ID면 AiNotFoundException 발생, save 미호출")
+        void notFound() {
             // given
             given(aiRepository.findById(aiId)).willReturn(Optional.empty());
-            log.info("[deleteAi_notFound] given - 존재하지 않는 aiId={}", aiId);
 
             // when & then
             assertThatThrownBy(() -> aiApplicationService.deleteAi(aiId))
                     .isInstanceOf(AiNotFoundException.class);
-
-            log.info("[deleteAi_notFound] then - AiNotFoundException 발생 확인, save 미호출 확인");
-            then(aiRepository).should(times(1)).findById(aiId);
-            then(aiRepository).should(times(0)).save(aiEntity);
+            then(aiRepository).should(never()).save(any());
         }
     }
 }
